code/cfn.yml
---
Parameters:
  AwsRegion:
    Type: String
  EksCtlClusterName:
    Type: String
    Default: dssc-k8s
  AdminIp:
    Type: String
    Default: 0.0.0.0/0
  AmiId:
    Description: AWS Linux 2 AMI ID
    Type: AWS::EC2::Image::Id
  VpcId:
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Description: Subnet ID with public IP addressing
    Type: AWS::EC2::Subnet::Id
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
  JumphostInstance:
    Type: String
    Default: t2.medium

Resources:
  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      KeyName: !Ref KeyPair
      SubnetId: !Ref SubnetId
      InstanceType: !Ref JumphostInstance
      SecurityGroupIds:
        - !Ref Ec2InstanceSecurityGroup
      IamInstanceProfile: !Ref EksInstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          mkdir -p /home/ec2-user
          cd /home/ec2-user
          wget https://raw.githubusercontent.com/OzNetNerd/Deep-Security-Smart-Check-Demo/master/code/scripts/run.sh
          chmod +x run.sh
          chown -R ec2-user:ec2-user /home/ec2-user
      Tags:
        - Key: Name
          Value: SmartCheckJumphost

  Ec2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to the Smart Check jumpbox
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref AdminIp
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref AdminIp
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5001
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VpcId

  EksEc2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"

  EksInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref EksEc2Role

  EksEc2Policy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: 'eksctl'
      Roles:
        - !Ref EksEc2Role
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Sid: VisualEditor0
          Effect: Allow
          Action:
          - iam:CreateInstanceProfile
          - iam:DeleteInstanceProfile
          - iam:GetRole
          - iam:GetInstanceProfile
          - iam:RemoveRoleFromInstanceProfile
          - iam:CreateRole
          - iam:DeleteRole
          - iam:AttachRolePolicy
          - iam:PutRolePolicy
          - iam:ListInstanceProfiles
          - iam:AddRoleToInstanceProfile
          - iam:ListInstanceProfilesForRole
          - iam:PassRole
          - iam:CreateServiceLinkedRole
          - iam:DetachRolePolicy
          - iam:DeleteRolePolicy
          - iam:DeleteServiceLinkedRole
          - ec2:DeleteInternetGateway
          - iam:GetRolePolicy
          Resource:
          - !Sub 'arn:aws:iam::${AWS::AccountId}:role/eksctl-*'
          - !Sub 'arn:aws:iam::${AWS::AccountId}:instance-profile/eksctl-*'
          - arn:aws:ec2:*:*:internet-gateway/*
        - Sid: VisualEditor1
          Effect: Allow
          Action:
          - ec2:AuthorizeSecurityGroupIngress
          - ec2:DeleteSubnet
          - ec2:AttachInternetGateway
          - ec2:DeleteRouteTable
          - ec2:AssociateRouteTable
          - ec2:DescribeInternetGateways
          - ec2:CreateRoute
          - ec2:CreateInternetGateway
          - ec2:RevokeSecurityGroupEgress
          - autoscaling:DescribeAutoScalingGroups
          - autoscaling:UpdateAutoScalingGroup
          - ec2:DeleteInternetGateway
          - ec2:DescribeKeyPairs
          - ec2:DescribeRouteTables
          - ec2:ImportKeyPair
          - ec2:DescribeLaunchTemplates
          - ec2:CreateTags
          - ec2:CreateRouteTable
          - ec2:RunInstances
          - cloudformation:*
          - ec2:DetachInternetGateway
          - ec2:DisassociateRouteTable
          - ec2:RevokeSecurityGroupIngress
          - ec2:DescribeImageAttribute
          - ec2:DeleteNatGateway
          - ec2:DeleteVpc
          - autoscaling:DeleteAutoScalingGroup
          - ec2:CreateSubnet
          - ec2:DescribeSubnets
          - eks:*
          - autoscaling:CreateAutoScalingGroup
          - ec2:DescribeAddresses
          - ec2:DeleteTags
          - ec2:CreateNatGateway
          - autoscaling:DescribeLaunchConfigurations
          - ec2:CreateVpc
          - ec2:DescribeVpcAttribute
          - ec2:DescribeAvailabilityZones
          - autoscaling:DescribeScalingActivities
          - ec2:CreateSecurityGroup
          - ec2:ModifyVpcAttribute
          - ec2:ReleaseAddress
          - ec2:AuthorizeSecurityGroupEgress
          - ec2:DeleteLaunchTemplate
          - ec2:DescribeTags
          - ec2:DeleteRoute
          - ec2:DescribeLaunchTemplateVersions
          - ec2:DescribeNatGateways
          - ec2:AllocateAddress
          - ec2:DescribeSecurityGroups
          - ec2:DescribeImages
          - autoscaling:CreateLaunchConfiguration
          - ec2:CreateLaunchTemplate
          - autoscaling:DeleteLaunchConfiguration
          - ec2:DescribeVpcs
          - ec2:DeleteSecurityGroup
          Resource: "*"
Outputs:
  SmartCheckJumphost:
    Value: !GetAtt Ec2Instance.PublicDnsName
    Export:
      Name: !Sub "${AWS::StackName}-SmartCheckJumphost"
